--- a/custom.css
+++ b/custom.css
@@ -34,6 +34,11 @@ body {
     margin-bottom: 25px;
 }
 
+.content .card .list-group .list-group-flush {
+    border-color: red;
+    background-color: pink;
+}
+
 /*-------- Footer ------------ */
 
 footer {
