--- a/custom.css
+++ b/custom.css
@@ -42,6 +42,7 @@ body {
 .content .cards-container {
     display: flex;
     flex-wrap: wrap;
+    align-items: flex-start;
 }
 
 .content .cards-container .card {
