--- a/custom.css
+++ b/custom.css
@@ -55,6 +55,10 @@ body {
     width: 100%;
 }
 
+.content iframe {
+    width: 100%;
+}
+
 @media screen and (min-width: 680px) {
     .content .cards-container .card {
         max-width: calc(33.33% - 10px);
